테스트 커버리지 70% 및 안정화